--- a/Indigo.css
+++ b/Indigo.css
@@ -20,7 +20,7 @@ License: MIT
   --grey9: #999999;
   --link_local: #008800;
   --link_local_hover: #00FF00;
-  --link_main: #5942fc;
+  --link_main: #5942fC;
   --link_main_hover: #4F6EFF;
   --text_alert: #FF0000;
   --text_warning: #F6F637;
@@ -76,16 +76,6 @@ p {
   color: var(--grey8);
 }
 
-.plugin-detail-tabs > ul > li.active > a {
-  background-color: var(--grey2);
-  background-image: linear-gradient(var(--grey2), var(--grey1));
-  color: var(--link_main);
-  border-top-color: var(--border_medium);
-  border-left-color: var(--border_medium);
-  border-right-color: var(--border_medium);
-  border-bottom-color: var(--border_medium);
-}
-
 span.badge {
   background-color: var(--link_local);
 }
@@ -98,6 +88,45 @@ table.table {
   background-color: var(--border_medium);
 }
 
+table.sortable span.reversed {
+  border-color: transparent transparent var(--link_local) transparent;
+}
+
+table.sortable span.reversed.up {
+  border-color: var(--link_local) transparent transparent transparent;
+}
+
+table.sortable span.sign {
+ color: var(--link_local_hover);
+}
+
+table.sortable thead {
+  background-image: linear-gradient(var(--grey2), var(--grey1));
+  border-top-color: 0 var(--border_medium);
+  border-left-color: 0 var(--border_medium);
+  border-right-color: 0 var(--border_medium);
+  border-bottom-color: 0 var(--border_medium);
+  color: var(--border_medium)
+}
+
+table.sortable thead:hover {
+  background-image: linear-gradient(var(--grey3), var(--grey2));
+  border-top-color: 0 var(--border_medium);
+  border-left-color: 0 var(--border_medium);
+  border-right-color: 0 var(--border_medium);
+  border-bottom-color: 0 var(--border_medium);
+  color: var(--border_medium)
+}
+
+table.sortable thead th:hover:not([data-defaultsort=disabled]) {
+  background-image: linear-gradient(var(--grey3), var(--grey2));
+  border-top-color: 0 var(--border_medium);
+  border-left-color: 0 var(--border_medium);
+  border-right-color: 0 var(--border_medium);
+  border-bottom-color: 0 var(--border_medium);
+  color: var(--link_local_hover)
+}
+
 table thead a {
   color: var(--link_local);
 }
@@ -106,44 +135,11 @@ table thead a:hover {
   color: var(--link_local_hover);
 }
 
-table.sortable span.reversed {
-  border-color: transparent transparent var(--link_main) transparent;
-}
-
-table.sortable span.reversed.up {
-  border-color: var(--link_main) transparent transparent transparent;
-}
-
-table.sortable span.sign {
- color: var(--link_main_hover);
-}
-
-table.sortable thead {
-  background-image: linear-gradient(var(--grey2), var(--grey1));
-  border-top-color: 0px var(--border_medium);
-  border-left-color: 0px var(--border_medium);
-  border-right-color: 0px var(--border_medium);
-  border-bottom-color: 0px var(--border_medium);
-  color: var(--link_main)
-}
-
-table.sortable thead th:hover:not([data-defaultsort=disabled]) {
-  background-image: linear-gradient(var(--grey3), var(--grey2));
-  border-top-color: 0px var(--border_medium);
-  border-left-color: 0px var(--border_medium);
-  border-right-color: 0px var(--border_medium);
-  border-bottom-color: 0px var(--border_medium);
-  color: var(--link_main_hover)
-}
 
 /* DIV Containers*/
 div.cheatsheet h2,
 div.cheatsheet h3 {
   color: #00FF00;
-}
-
-div#page-body form#postform div.well {
-  background-color: var(--black);
 }
 
 div#details.tab-pane.active {
@@ -154,8 +150,8 @@ div#details.tab-pane.active {
   color: var(--link_main_hover)
 }
 
-div.dokuwiki a.wikilink1 {
-  color: var(--link_main) !important;
+div#page-body form#postform div.well {
+  background-color: var(--black);
 }
 
 div.dokuwiki a:link, div.dokuwiki a:visited {
@@ -171,6 +167,10 @@ div.dokuwiki a.urlextern:link,
 div.dokuwiki a.windows:link,
 div.dokuwiki a.interwiki:link {
   color: var(--link_main_hover);
+}
+
+div.dokuwiki a.wikilink1 {
+  color: var(--link_main) !important;
 }
 
 div.dokuwiki code>em {
@@ -318,10 +318,6 @@ pre {
   background-color: var(--grey1);
 }
 
-.dropdown-header {
-  color: var(--white);
-}
-
 /* Class Selectors */
 .alert-info {
   background-color: var(--grey2);
@@ -459,6 +455,10 @@ pre {
   color: var(--link_local);
 }
 
+.dropdown-header {
+  color: var(--white);
+}
+
 .dropdown-menu {
   background-color: var(--grey1);
   border-color: var(--border_medium);
@@ -499,6 +499,12 @@ pre {
 .form-control {
   background-color: var(--grey1);
   color: var(--white);
+}
+
+.form-control:focus {
+  border-color: var(--link_main);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(89, 66, 252, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(89, 66, 252, 0.6);
 }
 
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
@@ -610,6 +616,16 @@ pre {
   color: var(--grey8);
   background-image: linear-gradient(var(--grey1), var(--black));
   background-color: var(--black);
+}
+
+.plugin-detail-tabs > ul > li.active > a {
+  background-color: var(--grey2);
+  background-image: linear-gradient(var(--grey2), var(--grey1));
+  color: var(--link_main);
+  border-top-color: var(--border_medium);
+  border-left-color: var(--border_medium);
+  border-right-color: var(--border_medium);
+  border-bottom-color: var(--border_medium);
 }
 
 .postbody dl.attachbox dd dl.file {
@@ -737,29 +753,29 @@ pre {
 }
 
 .table.table-bordered.table-striped.sortable {
-  color: var(--link_main);
+  color: var(--grey8);
   border-top: 1px solid var(--border_medium) !important;
-  border-left: 0px solid var(--border_medium);
-  border-right: 0px solid var(--border_medium);
-  border-bottom: 0px solid var(--border_medium);
+  border-left: 0 solid var(--border_medium);
+  border-right: 0 solid var(--border_medium);
+  border-bottom: 0 solid var(--border_medium);
 }
 
 .table-bordered>thead>tr>th {
   background-image: linear-gradient(var(--grey2), var(--grey1));
-  color: var(--link_main);
+  color: var(--link_local);
   border-top: 1px solid var(--border_medium) !important;
-  border-left: 0px solid var(--border_medium);
-  border-right: 0px solid var(--border_medium);
-  border-bottom: 0px solid var(--border_medium);
+  border-left: 0 solid var(--border_medium);
+  border-right: 0 solid var(--border_medium);
+  border-bottom: 0 solid var(--border_medium);
 }
 
 .table-bordered>thead>tr>th:hover {
   background-image: linear-gradient(var(--grey3), var(--grey2));
   color: var(--link_main_hover);
   border-top: 1px solid var(--border_medium) !important;
-  border-left: 0px solid var(--border_medium);
-  border-right: 0px solid var(--border_medium);
-  border-bottom: 0px solid var(--border_medium);
+  border-left: 0 solid var(--border_medium);
+  border-right: 0 solid var(--border_medium);
+  border-bottom: 0 solid var(--border_medium);
 }
 
 .table-bordered>thead>tr>th,
@@ -840,17 +856,17 @@ pre {
 /* ID Selectors */
 #account-nav.nav-tabs {
   background-color: var(--grey1);
-  border-top: 0px solid var(--grey2);
-  border-left: 0px solid var(--grey2);
-  border-bottom: 0px solid var(--grey2);
-  border-right: 0px solid var(--grey2);
+  border-top: 0 solid var(--grey2);
+  border-left: 0 solid var(--grey2);
+  border-bottom: 0 solid var(--grey2);
+  border-right: 0 solid var(--grey2);
 }
 
 #account-nav.nav-tabs li a {
-  border-top: 0px solid var(--grey2);
-  border-left: 0px solid var(--grey2);
-  border-bottom: 0px solid var(--grey2);
-  border-right: 0px solid var(--grey2);
+  border-top: 0 solid var(--grey2);
+  border-left: 0 solid var(--grey2);
+  border-bottom: 0 solid var(--grey2);
+  border-right: 0 solid var(--grey2);
   color: var(--link_local);
 }
 
@@ -865,10 +881,10 @@ pre {
 
 #account-nav.nav-tabs li a:hover {
   background-color: var(--grey1);
-  border-top: 0px solid var(--grey2);
-  border-left: 0px solid var(--grey2);
-  border-bottom: 0px solid var(--grey2);
-  border-right: 0px solid var(--grey2);
+  border-top: 0 solid var(--grey2);
+  border-left: 0 solid var(--grey2);
+  border-bottom: 0 solid var(--grey2);
+  border-right: 0 solid var(--grey2);
   color: var(--link_local_hover);
 }
 
@@ -882,7 +898,6 @@ pre {
 
 #search .box .row {
   background-color: var(--black);
-  padding: 10px;
 }
 
 #search .box .row .form-group .radio label,
