--- a/Indigo.css
+++ b/Indigo.css
@@ -338,12 +338,12 @@ div.postbody div.poster-info {
 }
 
 .postbody div.content dl.file {
-background-color: #111111;
-padding: 3px;
-text-align: center;
-border: 0;
-max-width: 850px;
-margin: 0 auto;
+  background-color: #111111;
+  padding: 3px;
+  text-align: center;
+  border: 0;
+  max-width: 850px;
+  margin: 0 auto;
 }
 
 div.topic-nav {
@@ -644,9 +644,12 @@ pre {
 }
 
 .panel-body {
-  background-image: linear-gradient(var(--black), var(--black));
+  background-image: linear-gradient(#222222, #222222);
 }
 
+.panel-body .name {
+color: #777777;
+}
 .panel-heading {
   color: var(--link_local);
   background-image: linear-gradient(var(--grey1), var(--black));
